--- a/index.css
+++ b/index.css
@@ -405,7 +405,7 @@ body:not(.user-is-tabbing) a:focus {
 
 .header {
     background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, .4)), 
-        url('./images/header.jpg');
+        url('./images/desert_mod.jpg');
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -539,6 +539,7 @@ body:not(.user-is-tabbing) a:focus {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
+    max-width: 70%;
 }
 
 @media(max-width: 900px) {
